--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">My App Portfolio</string>
     <string name="action_settings">Settings</string>
+    <string name="appHeading">My NanoDegree Apps!</string>
+    <string name="spotify">Spotify Streamer</string>
+    <string name="scoresApp">Scores App</string>
+    <string name="libraryApp">Library App</string>
+    <string name="buildApp">Build it bigger</string>
+    <string name="xyzApp">xyz reader</string>
+    <string name="capstoneApp">Capstone: My own app</string>
 </resources>
